scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/assrtprog/AssrtCoreTest02f.scr
module good.extensions.assrtcore.safety.assrtprog.AssrtCoreTest02f;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B, role C)  // Testing JavaSMT
{
	1(x: int) from A to B; @"(x > 6)"
	2(y: int) from B to A; @"(y < 5)"
	3(z: int) from A to C; @"(z < 4)"
}
//*/
